// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Default should match snapshot 1`] = `
<i
  aria-label="icon: conecto"
  className="to-icon"
>
  <To />
</i>
`;

exports[`Icon SVG components Facebook SVG component should match snapshot 1`] = `
<svg
  className="to-icon-facebook"
  height="13"
  viewBox="0 0 13 13"
  width="13"
>
  <path
    d="M12.9078 0.737589V12.2624C12.9078 12.6312 12.6312 13 12.1702 13H8.94326V7.92908H10.6028L10.8794 5.99291H8.94326V4.70213C8.94326 4.14894 9.12766 3.78014 9.95745 3.78014H10.9716V2.02837C10.7872 2.02837 10.1418 1.93617 9.49645 1.93617C8.02128 1.93617 7.00709 2.85816 7.00709 4.51773V5.99291H5.25532V7.92908H6.91489V12.9078H0.737589C0.276596 12.9078 0 12.539 0 12.1702V0.737589C0 0.276596 0.276596 0 0.737589 0H12.2624C12.6312 0 12.9078 0.276596 12.9078 0.737589Z"
    fill="#572D2D"
  />
</svg>
`;

exports[`Icon SVG components Menu icon component should match snapshot 1`] = `
<div
  className="to-icon-menu"
>
  <span />
  <span />
</div>
`;

exports[`Icon no type should match snapshot 1`] = `
<i
  aria-label="icon: conecto"
  className="to-icon"
>
  <To />
</i>
`;

exports[`Icon type="alert" should match snapshot 1`] = `
<i
  aria-label="icon: alert"
  className="to-icon"
>
  <Alert />
</i>
`;

exports[`Icon type="arrow-down" should match snapshot 1`] = `
<i
  aria-label="icon: arrow-down"
  className="to-icon"
>
  <ArrowDown />
</i>
`;

exports[`Icon type="bookmark" should match snapshot 1`] = `
<i
  aria-label="icon: bookmark"
  className="to-icon"
>
  <Bookmark />
</i>
`;

exports[`Icon type="cc-amex" should match snapshot 1`] = `
<i
  aria-label="icon: cc-amex"
  className="to-icon"
>
  <CCAmex />
</i>
`;

exports[`Icon type="cc-default" should match snapshot 1`] = `
<i
  aria-label="icon: cc-default"
  className="to-icon"
>
  <CCDefault />
</i>
`;

exports[`Icon type="cc-dinersclub" should match snapshot 1`] = `
<i
  aria-label="icon: cc-dinersclub"
  className="to-icon"
>
  <CCDinersClub />
</i>
`;

exports[`Icon type="cc-discover" should match snapshot 1`] = `
<i
  aria-label="icon: cc-discover"
  className="to-icon"
>
  <CCDiscover />
</i>
`;

exports[`Icon type="cc-jcb" should match snapshot 1`] = `
<i
  aria-label="icon: cc-jcb"
  className="to-icon"
>
  <CCDiscover />
</i>
`;

exports[`Icon type="cc-mastercard" should match snapshot 1`] = `
<i
  aria-label="icon: cc-mastercard"
  className="to-icon"
>
  <CCMastercard />
</i>
`;

exports[`Icon type="cc-visa" should match snapshot 1`] = `
<i
  aria-label="icon: cc-visa"
  className="to-icon"
>
  <CCVisa />
</i>
`;

exports[`Icon type="check" should match snapshot 1`] = `
<i
  aria-label="icon: check"
  className="to-icon"
>
  <Check />
</i>
`;

exports[`Icon type="close" should match snapshot 1`] = `
<i
  aria-label="icon: close"
  className="to-icon"
>
  <Close />
</i>
`;

exports[`Icon type="cog" should match snapshot 1`] = `
<i
  aria-label="icon: cog"
  className="to-icon"
>
  <Cog />
</i>
`;

exports[`Icon type="colored-flag" should match snapshot 1`] = `
<i
  aria-label="icon: colored-flag"
  className="to-icon"
>
  <ColoredFlag />
</i>
`;

exports[`Icon type="concurrents" should match snapshot 1`] = `
<i
  aria-label="icon: concurrents"
  className="to-icon"
>
  <Concurrents />
</i>
`;

exports[`Icon type="conecto" should match snapshot 1`] = `
<i
  aria-label="icon: conecto"
  className="to-icon"
>
  <To />
</i>
`;

exports[`Icon type="email" should match snapshot 1`] = `
<i
  aria-label="icon: email"
  className="to-icon"
>
  <Email />
</i>
`;

exports[`Icon type="facebook" should match snapshot 1`] = `
<i
  aria-label="icon: facebook"
  className="to-icon"
>
  <Facebook />
</i>
`;

exports[`Icon type="flag" should match snapshot 1`] = `
<i
  aria-label="icon: flag"
  className="to-icon"
>
  <Flag />
</i>
`;

exports[`Icon type="marker" should match snapshot 1`] = `
<i
  aria-label="icon: marker"
  className="to-icon"
>
  <Marker />
</i>
`;

exports[`Icon type="menu" should match snapshot 1`] = `
<i
  aria-label="icon: menu"
  className="to-icon"
>
  <Menu />
</i>
`;

exports[`Icon type="notification" should match snapshot 1`] = `
<i
  aria-label="icon: notification"
  className="to-icon"
>
  <Notification />
</i>
`;

exports[`Icon type="phone" should match snapshot 1`] = `
<i
  aria-label="icon: phone"
  className="to-icon"
>
  <Phone />
</i>
`;

exports[`Icon type="search" should match snapshot 1`] = `
<i
  aria-label="icon: search"
  className="to-icon"
>
  <Search />
</i>
`;

exports[`Icon type="sms" should match snapshot 1`] = `
<i
  aria-label="icon: sms"
  className="to-icon"
>
  <SMS />
</i>
`;

exports[`Icon type="thumb-up" should match snapshot 1`] = `
<i
  aria-label="icon: thumb-up"
  className="to-icon"
>
  <ThumbUp />
</i>
`;

exports[`Icon type="user" should match snapshot 1`] = `
<i
  aria-label="icon: user"
  className="to-icon"
>
  <User />
</i>
`;
